--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo 'No tests, sorry!'",
     "build": "elm make --yes src/Main.elm --output public/built/index.js",
-    "watch": "nodemon --watch src --ext elm --exec 'npm run -s build'",
+    "watch": "ls src/**.elm | entr npm run -s build",
     "serve": "cd public && browser-sync start --server --files \"built/*.js, *.css\"",
     "start": "run-p serve watch"
   },
@@ -24,7 +24,6 @@
   "devDependencies": {
     "browser-sync": "2.12.8",
     "elm": "0.17.0",
-    "nodemon": "1.9.2",
     "npm-run-all": "2.1.0"
   }
 }
